- fixed - disabled drag on mobile devices

--- a/src/Resources/sass/components/wrapper.scss
+++ b/src/Resources/sass/components/wrapper.scss
@@ -306,6 +306,7 @@
                         [data-reset-interval] button {
                             border-top-left-radius: 0;
                             border-bottom-left-radius: 0;
+                            height: 38px;
                         }
 
                         .btn i {
